// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sprite pack-equipment strict mode should pack what it has when an icon is missing 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Skip icon <sandbox>/icons/test_icon_b.dds / 'test_icon_b', reason: IO error: <missing path>",
  ],
  "stdout": [
    "Starting packing the equipment sprite, parallel",
    "System ltx: <resources>/gamedata/configs/system.ltx",
    "Source icons dir: <sandbox>/icons",
    "Output dir: <sandbox>/lenient.dds",
    "Packed 3 icons in BC3RgbaUnorm format",
    "Saved the packed equipment sprite <sandbox>/lenient.dds",
  ],
}
`;

exports[`sprite pack-equipment strict mode should refuse a missing icon under strict 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Skip icon <sandbox>/icons/test_icon_b.dds / 'test_icon_b', reason: IO error: <missing path>",
    "Error: Texture processing error: Expected an icon to exist for each of the 1 sections declaring inv_grid_* fields, found none for: test_icon_b",
  ],
  "stdout": [
    "Starting packing the equipment sprite, parallel",
    "System ltx: <resources>/gamedata/configs/system.ltx",
    "Source icons dir: <sandbox>/icons",
    "Output dir: <sandbox>/strict.dds",
  ],
}
`;

exports[`sprite pack-equipment strict mode should write the expected files 1`] = `
[
  {
    "path": "icons/test_icon_a.dds",
    "sha256": "aa9b7d4a193862807b616041fe6eccaf3808baf14e87b75c555e9b433b61df20",
    "size": 2832,
  },
  {
    "path": "icons/test_icon_c.dds",
    "sha256": "e7c5f367251456cb8358436a8b8ae6537eeff98280b9f64b468425ed314809b8",
    "size": 2832,
  },
  {
    "path": "icons/test_icon_c_variant.dds",
    "sha256": "e7c5f367251456cb8358436a8b8ae6537eeff98280b9f64b468425ed314809b8",
    "size": 2832,
  },
  {
    "path": "lenient.dds",
    "sha256": "5583caa0d283e2f92e0a60c526e2dbab401fcf67ab87532b039ccb2fbfff4daa",
    "size": 8032,
  },
]
`;
